ft(login): users should be able to login

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <title>Aurthor's Haven</title>
-    </head>
+
+<head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="text/html" charset="utf-8" />
+        <link rel="stylesheet" type="text/css" media="screen" href="../src//assets/css/style.css" />
+        <title>iReporter</title>
+        <link rel="shortcut icon" href="../src/assets/images/favicon.png" type="image/x-icon">
+</head>
 
   <body>
     <div id="app"></div>
